<resources>
    <!--    ======================================   -->
    <!--    ====    Name application          ====   -->
    <!--    ======================================   -->
    <string name="app_name">FilmsCave</string>

    <!--    ======================================   -->
    <!--    ====    Content Description       ====   -->
    <!--    ======================================   -->
    <string name="cd_login_google">icon login with google</string>
    <string name="cd_login_facebook">icon to login with facebook</string>
    <string name="cd_login_anonymous">login to anonymous</string>

    <!--    ======================================   -->
    <!--    ====    Text: StartApplication    ====   -->
    <!--    ======================================   -->
    <string name="films">Films</string>
    <string name="cave">Cave</string>
    <string name="slogan">Spend your time on the best content, movie and series.</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="anonymous">Anonymous</string>

    <!--    ======================================   -->
    <!--    ====    Text: SignUp              ====   -->
    <!--    ======================================   -->
    <string name="back">back</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="accept_policy_terms">I accept the policy and terms</string>
    <string name="text_recommend_social_media_to_login">It\'s easier to sign up now</string>
    <string name="accept_policies">You must accept the policies before proceeding</string>
    <string name="password_rules_6chars">The password must be at least 6 characters</string>

    <!--    ======================================   -->
    <!--    ====    Text: Login               ====   -->
    <!--    ======================================   -->
    <string name="forgot_password">Forgot password?</string>
    <string name="empty_fields">Some required fields are empty</string>

    <!--    ======================================   -->
    <!--    ====    Text: Message error       ====   -->
    <!--    ======================================   -->
    <string name="id_message_login_successfully">The user has been successfully logged in.</string>
    <string name="id_message_password_invalid">The password is invalid.</string>
    <string name="id_message_email_invalid">The email account is not valid.</string>
    <string name="id_message_email_not_registered">There is no user with this email account.</string>
    <string name="id_message_sign_up_successful">The user has been created successfully.</string>
    <string name="id_message_login_successful">The user has been login successfully.</string>
    <string name="id_message_address_badly_formatted">The mail address is badly formatted.</string>
    <string name="id_message_email_used">The mail address is already in use by another account.</string>
    <string name="id_message_username_false">The username has already been taken.</string>
    <string name="id_message_for_recover_via_email">Enter your e-mail address we\'ll send you an email to reset your password</string>
    <string name="id_message_send_reset_correct">Email has been sent to your email correctly</string>

    <!--    ===========================================   -->
    <!--    ====    Text: Recovery pass via mail   ====   -->
    <!--    ===========================================   -->
    <string name="button_submit">Submit</string>
    <string name="title_via_email_field">Reset password?</string>
    <string name="icon_email">icon_email</string>

    <!--    ===========================================   -->
    <!--    ====    Text: User area                ====   -->
    <!--    ===========================================   -->
    <string name="lists">Lists</string>
    <string name="recommended">Recommended</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="message_lists">Your personalized movie and series lists.</string>
    <string name="message_recommended">Movies, series and personalized lists recommended by your friends.</string>
    <string name="message_friends">List with your friends.</string>
    <string name="message_settings">Application options.</string>
    <string name="sign_out">SignOut</string>
    <string name="friends_menu">Friends menu</string>


    <!--    ===========================================   -->
    <!--    ====    Text: Invite friend            ====   -->
    <!--    ===========================================   -->
    <string name="title_add_friends">Add your friends to FilmsCave</string>
    <string name="message_info_to_send_invitation">You will need their username. Username is not case sensitive. Now enter the username and press the button to send a request.</string>
    <string name="insert_username">Insert username</string>
    <string name="invite_friend">Invite friend</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="cero">se ha enviado la invitacion correctamente</string>
    <string name="uno">el nombre de usuario prosiblemente no existe</string>
    <string name="cien">la invitacion ya ha sido enviada previamente</string>
    <string name="username_empty">Username is empty</string>
    <string name="invite_yousetf">You can\'t invite yourself</string>
    <string name="confirm_request">Confirm Request</string>
    <string name="remove_request">Remove Request</string>
    <string name="error_occurred">An error has occurred</string>

</resources>