<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment"
    android:background="@color/main_light_blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_start_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/cd_login_anonymous"
            android:src="@drawable/change_icon_anonymous"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anonymous"
            android:textSize="8sp"
            android:textStyle="bold"
            android:textColor="@color/palette_white"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="SmallSp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.30" />

        <TextView
            android:id="@+id/name_app_part_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="15dp"
            android:text="@string/films"
            android:textColor="@color/palette_white"
            android:textSize="90sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"/>

        <TextView
            android:id="@+id/name_app_part_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingTop="20dp"
            android:text="@string/cave"
            android:textColor="@color/main_dark_blue"
            android:textSize="80sp"
            app:layout_constraintBottom_toBottomOf="@+id/name_app_part_a"
            app:layout_constraintStart_toStartOf="@+id/name_app_part_a"
            app:layout_constraintTop_toBottomOf="@+id/name_app_part_a" />

        <TextView
            android:id="@+id/slogan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="2"
            android:paddingTop="10dp"
            android:text="@string/slogan"
            android:textColor="@color/palette_white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/name_app_part_b"
            app:layout_constraintEnd_toEndOf="@+id/name_app_part_a"
            app:layout_constraintStart_toStartOf="@+id/name_app_part_a"
            app:layout_constraintTop_toBottomOf="@+id/name_app_part_b" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.3"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/main_dark_blue"
            android:text="@string/sign_up"
            android:textColor="@color/palette_white"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slogan"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/log_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.3"
            android:backgroundTint="@color/palette_white"
            android:text="@string/login"
            android:textColor="@color/main_dark_blue"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>