<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_light_blue"
    android:paddingTop="@dimen/status_bar_size"
    tools:context=".users.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_gradient_transparent_to_dark_blue">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            app:icon="@drawable/ic_arrow_back"
            app:iconTint="@color/palette_white"
            android:gravity="start|center_vertical"
            android:text="@string/back"
            android:textColor="@color/palette_white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.38" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:hintTextColor="@color/palette_white"
            android:textColorHint="@color/palette_white"
            app:boxCornerRadiusBottomEnd="@dimen/circle_radius"
            app:boxCornerRadiusBottomStart="@dimen/circle_radius"
            app:boxCornerRadiusTopEnd="@dimen/circle_radius"
            app:boxCornerRadiusTopStart="@dimen/circle_radius"
            app:boxStrokeColor="@color/palette_white"
            app:boxStrokeWidth="1.5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintWidth_percent="0.6">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/data_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textStyle="bold"
                android:textColor="@color/palette_white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            app:hintTextColor="@color/palette_white"
            android:textColorHint="@color/palette_white"
            app:boxCornerRadiusBottomEnd="@dimen/circle_radius"
            app:boxCornerRadiusBottomStart="@dimen/circle_radius"
            app:boxCornerRadiusTopEnd="@dimen/circle_radius"
            app:boxCornerRadiusTopStart="@dimen/circle_radius"
            app:boxStrokeColor="@color/palette_white"
            app:boxStrokeWidth="1.5dp"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_number_textInputLayout"
            app:layout_constraintWidth_percent="0.6">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/data_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/palette_white"
                android:inputType="textPassword"
                android:textSize="13sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/palette_links"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/password_textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/password_textInputLayout"
            tools:ignore="SmallSp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_log_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/palette_white"
            android:text="@string/login"
            android:textColor="@color/main_dark_blue"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password"
            app:layout_constraintWidth_percent="0.3" />

        <TextView
            android:id="@+id/text_sign_social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/text_recommend_social_media_to_login"
            android:textColor="@color/palette_white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_log_in" />

        <ImageView
            android:id="@+id/iconGoogle"
            android:contentDescription="@string/cd_login_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_google"
            app:layout_constraintStart_toStartOf="@+id/text_sign_social"
            app:layout_constraintTop_toBottomOf="@+id/text_sign_social"
            app:layout_constraintEnd_toStartOf="@id/iconFacebook"/>

        <ImageView
            android:id="@+id/iconFacebook"
            android:contentDescription="@string/cd_login_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_facebook"
            app:layout_constraintEnd_toEndOf="@+id/text_sign_social"
            app:layout_constraintStart_toEndOf="@+id/iconGoogle"
            app:layout_constraintTop_toBottomOf="@+id/text_sign_social" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            android:indeterminateDrawable="@drawable/bg_progress_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iconFacebook" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>